--- a/public/css/discover-artists.css
+++ b/public/css/discover-artists.css
@@ -225,6 +225,156 @@ html {
   padding: 0 1em;
 }
 /*------------------------------------*
+	$ FILTERS
+*------------------------------------*/
+.filters-menu {
+  margin: auto;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: box;
+  display: flex;
+  -webkit-box-lines: multiple;
+  -moz-box-lines: multiple;
+  -o-box-lines: multiple;
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  max-width: 1100px;
+  -webkit-box-pack: justify;
+  -moz-box-pack: justify;
+  -o-box-pack: justify;
+  -ms-flex-pack: justify;
+  -webkit-justify-content: space-between;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  -moz-box-align: center;
+  -o-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+}
+.filters-menu__search {
+  -webkit-box-flex: 1;
+  -moz-box-flex: 1;
+  -o-box-flex: 1;
+  box-flex: 1;
+  -webkit-flex: 100%;
+  -ms-flex: 100%;
+  flex: 100%;
+  padding: 0.5rem 1rem;
+}
+.filters-menu__category,
+.filters-menu__order {
+  margin: 0 1rem;
+}
+@media (min-width: 720px) {
+  .filters-menu__category {
+    -webkit-box-ordinal-group: 1;
+    -moz-box-ordinal-group: 1;
+    -o-box-ordinal-group: 1;
+    -ms-flex-order: 1;
+    -webkit-order: 1;
+    order: 1;
+  }
+  .filters-menu__search {
+    -webkit-box-ordinal-group: 2;
+    -moz-box-ordinal-group: 2;
+    -o-box-ordinal-group: 2;
+    -ms-flex-order: 2;
+    -webkit-order: 2;
+    order: 2;
+    -webkit-box-flex: 1;
+    -moz-box-flex: 1;
+    -o-box-flex: 1;
+    box-flex: 1;
+    -webkit-flex: auto;
+    -ms-flex: auto;
+    flex: auto;
+  }
+  .filters-menu__order {
+    -webkit-box-ordinal-group: 3;
+    -moz-box-ordinal-group: 3;
+    -o-box-ordinal-group: 3;
+    -ms-flex-order: 3;
+    -webkit-order: 3;
+    order: 3;
+  }
+}
+@media (min-width: 720px) {
+  .search {
+    max-width: 400px;
+    margin: auto;
+  }
+}
+.filters {
+  margin: 1rem 0.5rem;
+  border: solid 1px #ddd;
+  font-family: 'Raleway';
+  font-size: 0.8rem;
+  overflow: hidden;
+}
+.filters__title {
+  padding: 0.5rem 1rem;
+  font-weight: 600;
+  border-bottom: solid 1px #ddd;
+}
+.filters .filter {
+  padding: 0.5rem 1rem;
+  cursor: pointer;
+}
+.filters .filter.selected {
+  background: rgba(0,0,0,0.1);
+}
+/*------------------------------------*
+	$ INPUTS
+*------------------------------------*/
+.search {
+  position: relative;
+}
+.search input {
+  width: 100%;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  padding: 0.5em 0 0.5em 2em;
+  color: #555;
+  font-size: 1rem;
+}
+.search i {
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translate(0, -50%);
+  -moz-transform: translate(0, -50%);
+  -o-transform: translate(0, -50%);
+  -ms-transform: translate(0, -50%);
+  transform: translate(0, -50%);
+  left: 0.75em;
+  color: #808080;
+}
+.input[type="text"],
+.input[type="email"],
+.input[type="password"] {
+  font-size: 1rem;
+  padding: 0.5em;
+  color: #555;
+  border: 1px solid #ccc;
+  width: 100%;
+}
+.input[type="text"]:focus,
+.input[type="email"]:focus,
+.input[type="password"]:focus {
+  border-color: rgba(82,168,236,0.8);
+  -webkit-box-shadow: 0 0 8px rgba(82,168,236,0.6);
+  box-shadow: 0 0 8px rgba(82,168,236,0.6);
+}
+.input[type="text"][data-size='large'],
+.input[type="email"][data-size='large'],
+.input[type="password"][data-size='large'] {
+  font-size: 1.15rem;
+}
+/*------------------------------------*
 	$ BUTTONS
 *------------------------------------*/
 .button-solid {
@@ -265,6 +415,10 @@ html {
   padding: 0.5em 0.75em;
   display: table-cell;
 }
+.button-liner__action.following,
+.button-liner__action.cancel {
+  display: none;
+}
 .button-liner__number {
   padding: 0.5em;
   display: table-cell;
@@ -282,6 +436,18 @@ html {
 }
 .button-liner.disabled .button-liner__number {
   border-color: #bbb;
+}
+.button-liner.disabled .button-liner__action.folllow {
+  display: none;
+}
+.button-liner.disabled .button-liner__action.following {
+  display: table-cell;
+}
+.button-liner.disabled:hover .button-liner__action.following {
+  display: none;
+}
+.button-liner.disabled:hover .button-liner__action.cancel {
+  display: table-cell;
 }
 .facebook-button {
   color: #fff;
@@ -503,4 +669,38 @@ html {
 .artists {
   max-width: 1100px;
   margin: auto;
+}
+.artists-container {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: box;
+  display: flex;
+  max-width: 1100px;
+  margin: auto;
+  padding: 0 0.5rem;
+}
+.artists-container__artists {
+  -webkit-box-flex: 1;
+  -moz-box-flex: 1;
+  -o-box-flex: 1;
+  box-flex: 1;
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+}
+.artists-container__left-filters,
+.artists-container__right-filters {
+  width: 0;
+  overflow: hidden;
+  -webkit-transition: width 0.5s;
+  -moz-transition: width 0.5s;
+  -o-transition: width 0.5s;
+  -ms-transition: width 0.5s;
+  transition: width 0.5s;
+}
+.artists-container__left-filters.visible,
+.artists-container__right-filters.visible {
+  width: auto;
 }
