--- a/public/stylus/discover-artists.styl
+++ b/public/stylus/discover-artists.styl
@@ -24,6 +24,16 @@
 @import 'elements/texts.styl'
 
 /*------------------------------------*
+	$ FILTERS
+*------------------------------------*/
+@import 'elements/filters.styl'
+
+/*------------------------------------*
+	$ INPUTS
+*------------------------------------*/
+@import 'elements/inputs.styl'
+
+/*------------------------------------*
 	$ BUTTONS
 *------------------------------------*/
 @import 'elements/buttons.styl'
@@ -37,3 +47,19 @@
 .artists
 	max-width max-width
 	margin auto
+	
+.artists-container
+	display flex
+	max-width max-width
+	margin auto
+	padding 0 .5rem
+	&__artists
+		flex 1
+	&__left-filters
+	&__right-filters
+		width 0
+		overflow hidden
+		transition width .5s
+	&__left-filters.visible
+	&__right-filters.visible
+		width auto
